fix: Jump to top behavior on clicking page links
Previously, pages used to just jump straight to top on clicking next/prev
page links. Adding a scroll-behavior of smooth fixes that. Now, browser will
smoothly scroll to the top

--- a/css/base.css
+++ b/css/base.css
@@ -55,6 +55,7 @@ html {
     color: var(--font-color);
     caret-color: transparent;
     scrollbar-width: thin;
+    scroll-behavior: smooth;
 }
 
 body {
